--- a/WWW/post.html
+++ b/WWW/post.html
@@ -1,4 +1,4 @@
 <form action="hello.jssp" method="post">
-	<input name="night">	<input name="b">
+	<input name="night">	<input name="day">
 	<input type="submit">
 </form>
